# adaptive-model-serving-optimizer

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  code_review_report.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
Docker/: Dockerfile  docker-compose.yml
configs/: README.md  default.yaml  development.yaml  production.yaml  testing.yaml
notebooks/: exploration.ipynb
results/: results.json
scripts/: __init__.py  evaluate.py  train.py
src/adaptive_model_serving_optimizer/: __init__.py
src/adaptive_model_serving_optimizer/data/: __init__.py  loader.py  preprocessing.py
src/adaptive_model_serving_optimizer/evaluation/: __init__.py  metrics.py
src/adaptive_model_serving_optimizer/models/: __init__.py  model.py
src/adaptive_model_serving_optimizer/training/: __init__.py  trainer.py
src/adaptive_model_serving_optimizer/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_evaluation.py  test_model.py  test_quality_improvements.py  test_training.py
