[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-model-serving-optimizer"
version = "1.0.0"
description = "A comprehensive MLOps system for adaptive model serving optimization using multi-armed bandits"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Adaptive Model Serving Team", email = "team@adaptive-serving.ai"}
]
maintainers = [
    {name = "Adaptive Model Serving Team", email = "team@adaptive-serving.ai"}
]
keywords = [
    "machine-learning",
    "mlops",
    "model-serving",
    "optimization",
    "multi-armed-bandits",
    "tensorrt",
    "onnx",
    "pytorch",
    "triton",
    "performance-optimization"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing"
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "mlflow>=2.5.0",
    "ray>=2.5.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "omegaconf>=2.3.0",
    "pyyaml>=6.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "tqdm>=4.65.0",
    "click>=8.1.0"
]

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu>=1.15.0",
    "py3nvml>=0.2.7",
    "gpustat>=1.1.0"
]
tensorrt = [
    "pycuda>=2022.2"
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "pre-commit>=3.3.0",
    "bandit>=1.7.5",
    "safety>=2.3.0"
]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.23.0",
    "jupyterlab>=4.0.0",
    "notebook>=6.5.0",
    "nbconvert>=7.6.0",
    "plotly>=5.15.0"
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=2.0.0"
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0"
]
all = [
    "adaptive-model-serving-optimizer[gpu,dev,jupyter,docs,api]"
]

[project.urls]
Homepage = "https://github.com/adaptive-serving/adaptive-model-serving-optimizer"
Repository = "https://github.com/adaptive-serving/adaptive-model-serving-optimizer.git"
Documentation = "https://adaptive-model-serving-optimizer.readthedocs.io"
"Bug Tracker" = "https://github.com/adaptive-serving/adaptive-model-serving-optimizer/issues"
"Change Log" = "https://github.com/adaptive-serving/adaptive-model-serving-optimizer/blob/main/CHANGELOG.md"

[project.scripts]
adaptive-serving-train = "adaptive_model_serving_optimizer.scripts.train:main"
adaptive-serving-evaluate = "adaptive_model_serving_optimizer.scripts.evaluate:main"
adaptive-serving-serve = "adaptive_model_serving_optimizer.scripts.serve:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"adaptive_model_serving_optimizer" = ["configs/*.yaml", "data/*.json"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# mypy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "onnx.*",
    "onnxruntime.*",
    "tensorrt.*",
    "pycuda.*",
    "triton.*",
    "ray.*",
    "mlflow.*",
    "scipy.*",
    "sklearn.*",
    "seaborn.*",
    "plotly.*",
    "cv2.*"
]
ignore_missing_imports = true

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/adaptive_model_serving_optimizer",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU",
    "tensorrt: marks tests that require TensorRT"
]

# Coverage configuration
[tool.coverage.run]
source = ["src/adaptive_model_serving_optimizer"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "setup.py",
    "*/scripts/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:"
]

# Flake8 configuration
[tool.flake8]
max-line-length = 100
extend-ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by black)
    "W503",  # line break before binary operator
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    ".tox"
]
per-file-ignores = [
    "__init__.py:F401",  # imported but unused
]

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101", "B601"]  # Skip assert_used and shell usage warnings

# Safety configuration
[tool.safety]
ignore = []
short_report = false
full_report = true